# aptos-core

./: Cargo.toml
aptos-move/framework/move-stdlib/doc/: string.md
aptos-move/framework/move-stdlib/sources/: string.move
aptos-move/framework/move-stdlib/src/natives/: mod.rs  string.rs
unique/marketplace/: Move.toml
unique/tokens/: Cargo.toml  Move.toml
unique/tokens/sources/modules/: unique_coin.move  unique_token.move
unique/tokens/tests/: unique_coin.rs  unique_token.rs
unique/toycoin/: Move.toml
unique/toycoin/sources/modules/: Coin.move  collection.move  create_nft.move  toycoin.move
unique/toycoin/sources/scripts/: add_one.move  parse_struct_from_vec.move  test-coin.move
unique/unique-client/: Cargo.toml  config.toml
unique/unique-client/src/: main.rs
unique/unique-client/tests/: airdrop.rs  build_and_publish.rs  client.rs  deserializing_resources.rs  marketplace.rs  parse_struct.rs  script.rs  test_harness.rs  toycoin.rs
