[package]
name = "tokens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { workspace = true }
aptos-framework = { workspace = true }
aptos-language-e2e-tests = { workspace = true }
aptos-vm-genesis = { workspace = true }
aptos-types = { workspace = true }
move-core-types = { workspace = true }
e2e-move-tests = { path = "../../aptos-move/e2e-move-tests" }

bcs = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
