[package]
name = "unique-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { workspace = true }
aptos-api-test-context = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
aptos-config = { workspace = true }
regex ={ workspace = true }
move-binary-format = { workspace = true }
bcs ={ workspace = true }
aptos-framework = { workspace = true }
sealed_test = "1.0.0"
