[package]
name = "unique-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { workspace = true }
aptos-api-test-context = { workspace = true }
aptos-logger = { workspace = true }
aptos-config = { workspace = true }
aptos-framework = { workspace = true }
move-binary-format = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
regex ={ workspace = true }
bcs ={ workspace = true }
sealed_test = "1.0.0"
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }