[package]
name = "unique-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { workspace = true }
aptos-api-test-context = { workspace = true }
aptos-logger = { workspace = true }
aptos-config = { workspace = true }
aptos-node = { workspace = true }
aptos-framework = { workspace = true }
aptos-language-e2e-tests = { workspace = true }
aptos-cached-packages = { workspace = true }
move-binary-format = { workspace = true }
aptos-vm-genesis = { workspace = true }
aptos-types = { workspace = true }
e2e-move-tests = { path = "../../aptos-move/e2e-move-tests" }

url = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
bcs = { workspace = true }
sealed_test = "1.0.0"
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }